# oxool-module-templaterepo

./: Makefile.am  TemplateRepo.xml  configure.ac  module.xml.in
admin/: admin.html  admin.js
admin/l10n/: zh_TW.json
debian/: changelog  control
src/: Module.cpp  TemplateRepo.cpp
